@startuml

abstract class Shape {
    -renderer_: Renderer
    +draw()
}

class Circle {
    -radius_: int
    +draw()
}

interface Renderer {
    +drawCircle(radius: int)
}

class VectorRenderer {
    +drawCircle(radius: int)
}

class RasterRenderer {
    +drawCircle(radius: int)
}

Shape <|-- Circle
Shape *-- Renderer : composed implementation
Renderer <|.. VectorRenderer
Renderer <|.. RasterRenderer

@enduml
